05 Request Batch Grouping

--- a/OData/04 Filter, Sort and Count/manifest.json
+++ b/OData/04 Filter, Sort and Count/manifest.json
@@ -67,8 +67,7 @@
         "settings": {
           "autoExpandSelect": true,
           "earlyRequests": true,
-          "operationMode": "Server",
-          "groupId": "$auto"
+          "operationMode": "Server"
         }
       }
     }
